// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate calculates the total when given "=" 1`] = `
Object {
  "next": null,
  "operation": null,
  "total": "10",
}
`;

exports[`calculate changes the sign of next or total when given "+/-" 1`] = `
Object {
  "next": "-2",
  "operation": "+",
  "total": "8",
}
`;

exports[`calculate changes the sign of next or total when given "+/-" 2`] = `
Object {
  "next": null,
  "operation": null,
  "total": "8",
}
`;

exports[`calculate returns an empty object when given "AC" 1`] = `
Object {
  "next": null,
  "operation": null,
  "total": null,
}
`;

exports[`calculate returns an empty object when given a "." after a number with a decimal point 1`] = `Object {}`;

exports[`calculate updates next when given "." 1`] = `
Object {
  "next": "2.",
  "operation": "+",
  "total": "8",
}
`;

exports[`calculate updates next when given "0" 1`] = `
Object {
  "next": "20",
  "operation": "+",
  "total": "8",
}
`;

exports[`calculate updates next when given a number 1`] = `
Object {
  "next": "23",
  "operation": "+",
  "total": "8",
}
`;

exports[`calculate updates next when given an operation button and two operands are set 1`] = `
Object {
  "next": null,
  "operation": "-",
  "total": "10",
}
`;
